--- a/src/main/resources/MDS2/instagual/Registrarse_ventana.html
+++ b/src/main/resources/MDS2/instagual/Registrarse_ventana.html
@@ -7,10 +7,8 @@
  </head>
  <body>
   <vaadin-vertical-layout size-full>
-   <vaadin-vertical-layout spacing="false" size-full margin="false" _id="cabecera" :expand="4">
-    <vaadin-label style-name="h1 bold colored" plain-text _id="instagual" :center>
-      Instagual 
-    </vaadin-label>
+   <vaadin-vertical-layout spacing="false" margin="false" _id="cabecera">
+    <vaadin-image source="C:/Users/Fran/Desktop/WORKSPACES/MDS2eclipse/instagual/src/main/webapp/VAADIN/themes/temaPrincipal/Logo_insta.png" width-full _id="logo_instagualI" :center></vaadin-image>
    </vaadin-vertical-layout>
    <vaadin-vertical-layout spacing="false" size-full margin="false" _id="inferior" :expand="6">
     <vaadin-label style-name="h2 bold colored" plain-text _id="registrarseL" :bottom :center>
@@ -19,10 +17,10 @@
     <vaadin-text-field icon="fonticon://Vaadin-Icons/e80d" style-name="inline-icon" placeholder="Email" width-full _id="correoTF" :bottom :center></vaadin-text-field>
     <vaadin-password-field icon="fonticon://Vaadin-Icons/e669" style-name="inline-icon" placeholder="Contraseña" width-full _id="passwordTF" :bottom :center></vaadin-password-field>
     <vaadin-horizontal-layout width-full :bottom>
-     <vaadin-button style-name="primary" plain-text _id="registrarseB">
+     <vaadin-button style-name="primary" width-full plain-text _id="registrarseB">
        Registrarse 
      </vaadin-button>
-     <vaadin-button style-name="danger" plain-text _id="cancelarB" :right>
+     <vaadin-button style-name="danger" width-full plain-text _id="cancelarB" :right>
        Cancelar 
      </vaadin-button>
     </vaadin-horizontal-layout>
