--- a/src/main/resources/MDS2/instagual/Buscar_vista_admin_ventana.html
+++ b/src/main/resources/MDS2/instagual/Buscar_vista_admin_ventana.html
@@ -6,20 +6,47 @@
   <meta name="vaadin-version" content="8.1.5">
  </head>
  <body>
-  <vaadin-vertical-layout size-full>
-   <vaadin-horizontal-layout width-full _id="cabecera">
+  <vaadin-vertical-layout>
+   <vaadin-horizontal-layout width-full _id="cabecera" :expand="0.1">
+    <vaadin-image source="C:/WORKSPACES/Vaadin/Instagual/src/main/webapp/VAADIN/themes/temaPrincipal/Instagual_text.png" height="50px" _id="instaTextI"></vaadin-image>
     <vaadin-text-field width-full _id="busquedaTF" :expand="0.8"></vaadin-text-field>
     <vaadin-button icon="fonticon://Vaadin-Icons/e805" plain-text _id="buscarB" :expand="0.2"></vaadin-button>
     <vaadin-button style-name="primary" plain-text _id="cerrar_sesion_admin" :right>
       Cerrar sesión 
     </vaadin-button>
    </vaadin-horizontal-layout>
-   <vaadin-vertical-layout :expand="0.8">
-    <vaadin-label style-name="h2" plain-text _id="mensajeBienvenidaL" :center>
+   <vaadin-vertical-layout size-full :expand="0.8">
+    <vaadin-label style-name="h2" height="28px" plain-text _id="mensajeBienvenidaL" :center>
       Bienvenido, Administrador. Puede buscar usuarios 
     </vaadin-label>
    </vaadin-vertical-layout>
-   <vaadin-vertical-layout></vaadin-vertical-layout>
+   <vaadin-horizontal-layout width-full>
+    <vaadin-button icon="fonticon://Vaadin-Icons/e80d" style-name="primary" plain-text _id="buscarUsuarioB" :right>
+      Usuarios 
+    </vaadin-button>
+    <vaadin-button icon="fonticon://Vaadin-Icons/e6a9" style-name="primary" plain-text _id="buscarEtiquetaB">
+      Publicaciones 
+    </vaadin-button>
+   </vaadin-horizontal-layout>
+   <vaadin-vertical-layout _id="lista_de_usuarios_de_busqueda" :expand>
+    <vaadin-horizontal-layout width="80%" :center>
+     <vaadin-image source="C:/WORKSPACES/Vaadin/Instagual/src/main/webapp/VAADIN/themes/temaPrincipal/Usuario_predeterminado.png" width="100px" _id="imagenUsuarioI" :center :expand="0.2"></vaadin-image>
+     <vaadin-label plain-text _id="nombreUsuarioL" :middle :expand="0.5">
+       nombre usuario 
+     </vaadin-label>
+     <vaadin-button style-name="primary" plain-text _id="verPerfilUsuarioB" :middle :expand="0.2">
+       Ver Usuario 
+     </vaadin-button>
+    </vaadin-horizontal-layout>
+   </vaadin-vertical-layout>
+   <vaadin-vertical-layout _id="lista_de_publicaciones1">
+    <vaadin-horizontal-layout width="80%" :center>
+     <vaadin-image source="C:/WORKSPACES/Vaadin/Instagual/src/main/webapp/VAADIN/themes/temaPrincipal/defaultPhoto.png" width="150px" _id="imagenMuestraI" :center></vaadin-image>
+     <vaadin-image source="C:/WORKSPACES/Vaadin/Instagual/src/main/webapp/VAADIN/themes/temaPrincipal/defaultPhoto.png" width="150px" :center></vaadin-image>
+     <vaadin-image source="C:/WORKSPACES/Vaadin/Instagual/src/main/webapp/VAADIN/themes/temaPrincipal/defaultPhoto.png" width="150px" :center></vaadin-image>
+     <vaadin-image source="C:/WORKSPACES/Vaadin/Instagual/src/main/webapp/VAADIN/themes/temaPrincipal/defaultPhoto.png" width="150px" :center></vaadin-image>
+    </vaadin-horizontal-layout>
+   </vaadin-vertical-layout>
   </vaadin-vertical-layout>
  </body>
 </html>
